@@ -1,3 +1,10 @@
+2013-06-09 Riccardo Mottola <rm@gnu.org>
+
+	* GetNameController.h
+	* GetNameController.m
+	* AppController.m
+        Rename setDescription to setMessage to avoid method clash
+
 2013-06-07 Riccardo Mottola <rm@gnu.org>
 
 	* GetNameController.m
